--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title: 'the missing semester of your cs education'
-url: https://missing.csail.mit.edu
+title: 'il semestre mancante del tuo corso di studi in informatica'
+url: https://missing-semester-it.github.io
 
 # Settings
 markdown: kramdown
